# tower-otel

./: CHANGELOG.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/custom-attributes/: Cargo.toml
examples/custom-attributes/src/: main.rs
examples/grpc/: Cargo.toml  build.rs
examples/grpc/src/: main.rs
examples/http/: Cargo.toml
examples/http/src/: main.rs
src/: lib.rs  metrics.rs  trace.rs
src/metrics/: http.rs
src/metrics/http/: reqwest.rs
src/trace/: extractor.rs  grpc.rs  http.rs  http_client.rs  http_server.rs  injector.rs  layer.rs  make_span.rs  mod.rs  on_body_chunk.rs  on_eos.rs  on_failure.rs  on_request.rs  on_response.rs  propagate.rs
src/trace/http/: reqwest.rs
src/util/: http.rs
