[workspace]
members = [".", "examples/http", "examples/grpc"]

[workspace.package]
authors = ["Mattia Penati <mattia.penati@protonmail.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
opentelemetry = { version = "0.29.0", default-features = false }
opentelemetry-otlp = { version = "0.29", default-features = false, features = [
  "trace",
  "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
tower-otel = { path = "." }
tracing = { version = "0.1", default-features = false }
tracing-opentelemetry = { version = "0.30", default-features = false }
tracing-subscriber = "0.3"

[package]
name = "tower-otel"
version = "0.3.0"
description = "OpenTelemetry tracing layer for HTTP/gRPC services"
keywords = ["opentelemetry", "tracing", "tower", "http", "grpc"]
homepage = "https://github.com/mattiapenati/tower-otel"
repository = "https://github.com/mattiapenati/tower-otel"
documentation = "https://docs.rs/tower-otel"
edition.workspace = true
authors.workspace = true
license.workspace = true
autoexamples = false

[dependencies]
http = "1"
opentelemetry.workspace = true
pin-project = "1"
tower-layer = "0.3"
tower-service = "0.3"
tracing.workspace = true
tracing-opentelemetry.workspace = true
