[workspace]
members = [".", "examples/http", "examples/grpc"]

[workspace.package]
authors = ["Mattia Penati <mattia.penati@protonmail.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
opentelemetry = { version = "0.30.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.30", features = [
  "grpc-tonic",
  "metrics",
  "trace",
] }
opentelemetry_sdk = { version = "0.30", features = ["metrics", "rt-tokio"] }
tower-otel = { path = "." }
tracing = "0.1"
tracing-opentelemetry = "0.31"
tracing-subscriber = "0.3"

[package]
name = "tower-otel"
version = "0.6.2"
description = "OpenTelemetry layer for HTTP/gRPC services"
keywords = ["opentelemetry", "tracing", "tower", "http", "grpc"]
homepage = "https://github.com/mattiapenati/tower-otel"
repository = "https://github.com/mattiapenati/tower-otel"
documentation = "https://docs.rs/tower-otel"
edition.workspace = true
authors.workspace = true
license.workspace = true
autoexamples = false

[dependencies]
axum = { version = "0.8", optional = true, default-features = false, features = [
  "matched-path",
  "tokio",
] }
cfg-if = "1"
http = "1"
http-body = "1"
opentelemetry = { version = "0.30", default-features = false }
pin-project = "1"
tower-layer = "0.3"
tower-service = "0.3"
tracing = { version = "0.1", default-features = false }
tracing-opentelemetry = { version = "0.31", default-features = false }

[features]
default = []
axum = ["dep:axum"]
