[workspace]
members = [".", "examples/*"]

[workspace.package]
authors = [
  "Mattia Penati <mattia.penati@protonmail.com>",
  "Sylwester Rąpała <sylwesterrapala@outlook.com>",
]
edition = "2021"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry-otlp = { version = "0.31", features = [
  "grpc-tonic",
  "metrics",
  "trace",
] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "rt-tokio"] }
tower-otel = { path = "." }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = "0.3"

[package]
name = "tower-otel"
version = "0.10.0"
description = "OpenTelemetry layer for HTTP/gRPC services"
keywords = ["opentelemetry", "tracing", "tower", "http", "grpc"]
homepage = "https://github.com/mattiapenati/tower-otel"
repository = "https://github.com/mattiapenati/tower-otel"
documentation = "https://docs.rs/tower-otel"
edition.workspace = true
authors.workspace = true
license.workspace = true
autoexamples = false

[dependencies]
axum = { version = "0.8", optional = true, default-features = false, features = [
  "matched-path",
  "tokio",
] }
cfg-if = "1"
http = "1"
http-body = "1"
opentelemetry = { version = "0.31", default-features = false, features = [
  "metrics",
] }
pin-project = "1"
reqwest = { version = "0.13", optional = true, default-features = false }
tower-layer = "0.3"
tower-service = "0.3"
tracing = { version = "0.1", default-features = false }
tracing-opentelemetry = { version = "0.32", default-features = false }

[features]
default = ["propagate"]
propagate = []
axum = ["dep:axum"]
reqwest_013 = ["dep:reqwest"]
