[package]
name = "example-custom-attributes"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
axum = { version = "0.8", default-features = false, features = [
  "http1",
  "tokio",
] }
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
reqwest = { version = "0.13", default-features = false }
tokio = { version = "1", default-features = false, features = [
  "macros",
  "rt",
  "rt-multi-thread",
] }
tower = { version = "0.5", default-features = false }
tower-otel = { workspace = true, features = ["reqwest_013"] }
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
