[package]
name = "example-grpc"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tonic = "0.12"
tower = { version = "0.4", default-features = false }
tower-otel.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build = "0.10"
