[package]
name = "example-grpc"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
prost = "0.14"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tonic = "0.13"
tower = { version = "0.5", default-features = false }
tower-otel.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build = "0.13"
