[package]
name = "example-http"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
axum = { version = "0.6", default-features = false, features = ["http1", "tokio"] }
hyper = { version = "0.14", features = ["http1", "client"] }
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
tokio = { version = "1", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
tower = { version = "0.4", default-features = false }
tower-otel.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
